fix: Fix font in blog title not loading and improper line spacing for title on mobile

--- a/website/src/styles/_content.scss
+++ b/website/src/styles/_content.scss
@@ -163,6 +163,10 @@
 		&:focus .header-anchor{
 			@extend .not-sr-only;
 		}
+
+		@include mobile-only() {
+			line-height: 1.2em;
+		}
 	}
 
 	pre {
